Added loading modal

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -25,7 +25,7 @@
 
       <div class="row mt-3">
           <div class="col-sm">
-              <video id="video" width="80%" autoplay></video>
+              <video id="video" width="80%" autoplay playsinline="true"></video>
           </div>
       </div>
 
